--- a/style.css
+++ b/style.css
@@ -22,12 +22,19 @@
 body {
   margin: 0;
   padding: 0;
+  text-align: center;
 }
 
 form {
   text-align: center;
-  margin: 30px auto;
+  margin: 0 auto;
   max-width: 300px;
+}
+
+.customGuess {
+  display: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 /*remove arrow scroll bar from textbox  */
@@ -46,7 +53,9 @@ header {
   text-align: center;
 }
 h1 {
-  margin: 0;
+  line-height: 150px;
+  margin: auto;
+  padding: 0;
   color: #EB008B;
   font-family: 'Open Sans', sans-serif;
   font-weight: lighter;
@@ -66,10 +75,30 @@ p {
   display: inline-block;
   color: #404041;
   font-family: 'Open Sans', sans-serif;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
+}
+#OOR {
+  position: absolute;
+  height: auto;
+  width: 100%;
+  font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  padding: 5px;
+}
+
+.range {
+  padding: 0;
+  margin: 0;
+  font-size: .4em;
+}
+
+.minmax {
+  font-size: .8em;
 }
 
 button {
+  border-style: none;
   background-color: #929497;
   color: #fff;
   width: 100px;
@@ -104,10 +133,16 @@ input {
   margin: 0 auto;
   max-width: 300px;
   width: 100%;
- 
 }
+
 #userinput {
+  margin-top: 30px;
+  padding-left:5px;
   height: 28px;
+}
+
+#userinput:focus {
+  outline: none;
 }
 
 ::placeholder {
